• Added github ribbon.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>Simon Gregory</title>
+	<title>simongregory | github</title>
 	<link rel="stylesheet" type="text/css" href="css/s2d2.css"/>
 	<link rel="alternate" type="application/rss+xml" title="Simon Gregory RSS Feed" href="http://blog.simongregory.com/feed/" />
 </head>
@@ -25,5 +25,6 @@
 		<div class="push"></div>
 	</div>
 	<div class="footer">&copy;&nbsp;simon gregory, MMX</div>
+  <a href="http://github.com/simongregory"><img id="forkme" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
 </body>
 </html>
