--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>simongregory | github</title>
-	<link rel="stylesheet" type="text/css" href="css/s2d2.css"/>
-	<link rel="alternate" type="application/rss+xml" title="Simon Gregory RSS Feed" href="http://blog.simongregory.com/feed/" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>simongregory | github</title>
+    <link rel="stylesheet" type="text/css" href="css/s2d2.css"/>
+    <link rel="alternate" type="application/rss+xml" title="Simon Gregory RSS Feed" href="http://blog.simongregory.com/feed/" />
 </head>
 <body>
-	<div class="wrapper">
-		<div class="push"/></div>
-		<h1><a href="http://blog.simongregory.com">Simon Gregory</a></h1>
-		<div class="push"></div>
-		<ul>
-			<li><a href="http://blog.simongregory.com" rel="me">blog</a></li>
-			<li><a href="http://facebook.com/am.i.simon.gregory" rel="me">facebook</a></li>
-			<li><a href="http://twitter.com/simongregory" rel="me">twitter</a></li>
-			<li><a href="http://uk.linkedin.com/in/simongregorys" rel="me">linkedin</a></li>
-			<li><a href="http://github.com/simongregory" rel="me">github</a></li>
-			<li><a href="https://www.ohloh.net/accounts/simongregory" rel="me">ohloh</a></li>
-			<li><a href="http://delicious.com/simongregory" rel="me">delicious</a></li>
-			<li><a href="http://www.flickr.com/photos/simongregory/" rel="me">flickr</a></li>
-		</ul>
-		<div class="push"></div>
-	</div>
-	<div class="footer">&copy;&nbsp;simon gregory, MMX</div>
+    <div class="wrapper">
+        <div class="push"/></div>
+        <h1><a href="http://blog.simongregory.com">Simon Gregory</a></h1>
+        <div class="push"></div>
+        <ul>
+            <li><a href="http://blog.simongregory.com" rel="me">blog</a></li>
+            <li><a href="http://facebook.com/am.i.simon.gregory" rel="me">facebook</a></li>
+            <li><a href="http://twitter.com/simongregory" rel="me">twitter</a></li>
+            <li><a href="http://uk.linkedin.com/in/simongregorys" rel="me">linkedin</a></li>
+            <li><a href="http://github.com/simongregory" rel="me">github</a></li>
+            <li><a href="https://www.ohloh.net/accounts/simongregory" rel="me">ohloh</a></li>
+            <li><a href="http://delicious.com/simongregory" rel="me">delicious</a></li>
+            <li><a href="http://www.flickr.com/photos/simongregory/" rel="me">flickr</a></li>
+        </ul>
+        <div class="push"></div>
+    </div>
+    <div class="footer">&copy;&nbsp;simon gregory, MMXII</div>
   <a href="http://github.com/simongregory"><img id="forkme" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub" /></a>
 </body>
 </html>
